<resources>
    <string name="app_name">All Practice</string>
    <string name="Firebase_Token" translatable="false">Firebase Register Token : %s</string>
    <string name="firebase_notification">Firebase Notification</string>
    <string name="sqllite_database">SQLLite DataBase</string>
    <string name="sql_lite_database">SQL Lite Database</string>
    <string name="no_record_available">No Record Available</string>
    <string name="phone_number">Phone Number</string>
    <string name="image">image</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_contact_no">Enter Contact No.</string>
    <string name="update_record">Update Record</string>
    <string name="update">Update</string>
    <string name="cancle">Cancle</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_record">Add Record</string>
    <string name="data_binding">Data Binding</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter">Enter</string>
    <string name="edittextdatabinding">EditTextDataBinding</string>
    <string name="recyclerviewdatabinding">RecyclerViewDataBinding</string>
    <string name="alertdialogdatabinding">AlertDialogDataBinding</string>
    <string name="custom_dialog">Custom Dialog With Binding</string>
    <string name="objectboxdatabase">Object Box Database</string>
    <string name="enter_note_instruction">Enter Note Instruction</string>
    <string name="add_note">Add Note</string>
    <string name="bottomnavigation">Bottom Navigation</string>
    <string name="notification">Notification</string>
    <string name="sqlite_database">Sqlite Database</string>
    <string name="object_box_db">Object Box Db</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_notification">Get Notification</string>
    <string name="welcome_to_the_firebase_notification_testing">Welcome To The FireBase Notification Testing</string>
    <string name="todo">TODO</string>
    <string name="add_item">Add Item</string>
    <string name="foregroundService">Foreground Service</string>
    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="stop_foreground_service">Stop Foreground Service</string>
    <string name="broadcast_receiver_service">Broadcast Receiver</string>
    <string name="broadcast_receiver_with_manifest">Broadcast Receiver with manifest</string>
    <string name="flight_mode">Flight Mode</string>
    <string name="wifi_is_off">WIFI IS OFF</string>
    <string name="custom_broadcast">Custom Broadcast</string>
    <string name="decrement">Decrement</string>
    <string name="increment">Increment</string>
    <string name="hello">Hello</string>
    <string name="next_activity">Next Activity</string>
    <string name="android_task">Android Task</string>
    <string name="search_item">Search Item</string>
    <string name="show_favourites">Show Favourites</string>
    <string name="in_app_purchase">In App Purchase</string>
    <string name="buy_your_product">Buy your product</string>
    <string name="per_weekly">PER WEEKLY</string>
    <string name="per_monthly">PER MONTHLY</string>
    <string name="per_yearly">PER YEARLY</string>
    <string name="subscribe">Subscribe</string>
    <string name="purchase">Purchase</string>
    <string name="all_practice">All Practice</string>
    <string name="custom_font">Custom Font</string>
    <string name="custom_font_using_style">Custom Font Using Style</string>
    <string name="custom_font_using_type_face">Custom Font Using Type Face</string>
    <string name="radha_krishna">Radha Krishna</string>
    <string name="name">Name</string>
    <string name="add_new_author">Add New Author</string>
    <string name="enter_author_name">Enter Author Name</string>
    <string name="add">Add</string>
    <string name="firebase_realtime_db">Firebase Realtime DB</string>
    <string name="update_author">Update Author</string>
    <string name="real_time_data_base">Real Time Database</string>
    <string name="fire_store_database">Fire Store Database</string>
    <string name="firebase_database">Firebase Database</string>
    <string name="firebase_databases">FIREBASE DATABASES</string>
    <string name="google_authentication">Google Authentication</string>
    <string name="web_client_id">453230617224-g2gvo729p91mt6488ikmo3i6cscgjv3k.apps.googleusercontent.com</string>
    <string name="registration">Registration</string>
    <string name="enter_first_name">enter first name</string>
    <string name="enter_last_name">enter last name</string>
    <string name="enter_user_name">enter user name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="do_not_have_account_register_here">Do not have account? Register here!</string>
    <string name="do_not_have_account_login_here">Do not have account? Login here!</string>
</resources>