<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Firebase_Notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firebase_notification"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:onClick="@{(v)->onClick.onClick(v)}"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Sqllite_Database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:onClick="@{(v)->onClick.onClick(v)}"
        android:text="@string/sqllite_database"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_DataBinding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_binding"
        app:layout_constraintTop_toBottomOf="@+id/btn_Sqllite_Database"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="@{(v)->onClick.onClick(v)}"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ObjectBoxDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objectboxdatabase"
        app:layout_constraintTop_toBottomOf="@+id/btn_Sqllite_Database"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="@{(v)->onClick.onClick(v)}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_BottomNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottomnavigation"
        app:layout_constraintTop_toBottomOf="@+id/btn_ObjectBoxDatabase"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="@{(v)->onClick.onClick(v)}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ForegroundService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foregroundService"
        app:layout_constraintTop_toBottomOf="@+id/btn_ObjectBoxDatabase"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="@{(v)->onClick.onClick(v)}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_BroadcastReceiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broadcast_receiver_service"
        app:layout_constraintTop_toBottomOf="@+id/btn_BottomNavigation"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="@{(v)->onClick.onClick(v)}"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Android_Task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_task"
        app:layout_constraintTop_toBottomOf="@+id/btn_ForegroundService"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="@{(v)->onClick.onClick(v)}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_InAppPurchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_app_purchase"
        app:layout_constraintTop_toBottomOf="@+id/btn_BroadcastReceiver"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="@{(v)->onClick.onClick(v)}"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>