<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#000000"
        android:layout_margin="10dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/firstnameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv"
        android:hint="@string/enter_first_name"
        android:textColor="#000000"
        android:layout_margin="10dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/lastnameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstnameInput"
        android:hint="@string/enter_last_name"
        android:textColor="#000000"
        android:layout_margin="10dp"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastnameInput"
        android:hint="@string/enter_user_name"
        android:textColor="#000000"
        android:layout_margin="10dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:layout_margin="10dp"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:text="@string/register"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"/>

    <TextView android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        android:layout_margin="10dp"
        android:text="@string/do_not_have_account_login_here"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>