<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:layout_margin="8dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_Update_Record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_record"
            android:textSize="18sp"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/black"
            android:textStyle="normal"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edt_up_Customer_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="#C8C9CD"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no" />

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edt_up_Customer_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:hint="@string/enter_contact_no"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="#C8C9CD"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no" />

            <ImageView
                android:id="@+id/img_phone"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/contact"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="8dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="18sp"
                android:id="@+id/tv_Gender"
                android:textColor="@color/black"
                android:textStyle="italic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <RadioGroup
                android:id="@+id/rb_upgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">
                <RadioButton
                    android:id="@+id/rb_upMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"/>
                <RadioButton
                    android:id="@+id/rb_upFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"/>
            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

            <TextView
                android:id="@+id/tv_Update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textColor="#E10303"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/tv_Cancle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancle"
                    android:textColor="#A3221818"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toEndOf="@+id/tv_Update"/>

            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
</layout>