<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inAppPurchase.SubscriptionActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Weekly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per_weekly"
        android:layout_marginTop="100dp"
        android:textSize="11sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Monthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:textSize="11sp"
        android:text="@string/per_monthly"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Weekly" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Yearly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per_yearly"
        android:textSize="11sp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>