<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".broadcastReceiver.BroadcastActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broadcast_receiver_service"
            android:textSize="25sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swh_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_is_off"
            android:clickable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:focusable="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_CustomBr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_broadcast"
            android:background="@drawable/bg_rec_oval"
            android:padding="15dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="45dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>