<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".broadcastReceiver.customBroadcast.CounterActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnIncrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increment"
            android:gravity="center_horizontal"
            android:textSize="22sp"
            android:background="@drawable/bg_rec"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDecrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrement"
            android:layout_marginStart="12dp"
            android:gravity="center_horizontal"
            android:textSize="22sp"
            android:background="@drawable/bg_rec"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/hello"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>