<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".foregroundService.ForegroundActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForeground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foregroundService"
        android:gravity="center"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_Data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForeground"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_StartService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_foreground_service"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_Data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_StopService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_foreground_service"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_StartService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>